# candle-optimisers

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  cobertura.xml  lbfgs_test.ipynb  pytorch_test.ipynb  rosenbrock.ipynb
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  lints.yml  rust-ci.yml
benches/: mnist_bench.rs  training.rs
examples/: adagrad.rs
examples/mnist/: main.rs  models.rs  optim.rs  parse_cli.rs  training.rs
paper/: paper.bib  paper.md
src/: adadelta.rs  adagrad.rs  adam.rs  adamax.rs  esgd.rs  lbfgs.rs  lib.rs  nadam.rs  radam.rs  rmsprop.rs
src/lbfgs/: strong_wolfe.rs
tests/: adadelta_tests.rs  adagrad_tests.rs  adam_tests.rs  adamax_tests.rs  esgd_tests.rs  lbfgs_tests.rs  nadam_tests.rs  radam-tests.rs  rmsprop-tests.rs  rprop-tests.rs
