[package]
name = "optimisers"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["optimisers", "candle", "tensor", "machine-learning"]
categories = ["science"]
description = "Optimisers for use with candle, the minimalist ML framework"
repository = "https://github.com/KGrewal1/optimisers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0"}
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }


[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
assert_approx_eq = "1.1.0"
criterion = { version = "0.4", features = ["html_reports"] }


[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl"]
