[package]
name = "optimisers"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["optimisers", "candle", "tensor", "machine-learning"]
categories = ["science", "machine-learning", "optimisation"]
description = "Optimisers for use with candle, the minimalist ML framework"
repository = "https://github.com/KGrewal1/optimisers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0"}
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
log = "0.4.20"


[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
assert_approx_eq = "1.1.0"
candle-datasets ={ git = "https://github.com/huggingface/candle.git", version = "0.3.0"}
clap = {version = "4.4.6", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "mnist_bench"
harness = false

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl"]

[profile.bench]
lto = true # maximal LTO optimisaiton

[lints.clippy]
pedantic = "warn"
suspicious = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
cargo = "warn"
imprecise_flops = "warn"
missing_errors_doc = {level =  "allow", priority = 1}
uninlined_format_args = {level =  "allow", priority = 1}
similar_names = {level =  "allow", priority = 1}
float_cmp = {level =  "allow", priority = 1} # as internaly rounded before the comparison
